--- a/app/css/style.css
+++ b/app/css/style.css
@@ -42,6 +42,24 @@ footer p {
   margin: 0 0 1em 0;
 }
 
+.not-found {
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 2em;
+  text-align: center;
+  width: 100%;
+}
+
+.not-found h1 {
+  font-size: 3em;
+  font-weight: bold;
+}
+
+.not-found h2 {
+  font-size: 2em;
+  font-weight: bold;
+}
+
 .home .athletes-selector {
   clear: both;
   padding: 2em;
@@ -91,6 +109,24 @@ footer p {
   vertical-align: middle;
 }
 
+nav.atheletes-menu {
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 2em;
+  text-align: center;
+  width: 100%;
+}
+
+nav.atheletes-menu a {
+  font-size: 1.6em;
+  margin: 0 1em 1em 0;
+}
+
+nav.atheletes-menu a.active {
+  color: #030303;
+  text-decoration: none;
+}
+
 .athlete {
   border: 1px solid #ccc;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
@@ -110,6 +146,7 @@ footer p {
 
 .athlete .picture-container {
   margin: -160px 0 0 0;
+  padding: 0 1em 0 1em;
 }
 
 .athlete .picture-container img {
@@ -117,7 +154,7 @@ footer p {
   border: 8px solid #fff;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   display: inline;
-  margin: 0 0 0 2em;
+  margin: 0 0 0 1em;
   width: 200px;
 }
 
