--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <div id="main"></div>
+    <div id="main"><% markup %></div>
     <script src="/js/bundle.js"></script>
   </body>
 </html>
