--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Judo Heroes - A Universal JavaScript rendering demo with React</title>
+    <title>Judo Heroes - A Universal JavaScript demo application with React</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
