--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="main"><%- markup -%></div>
+    <div id="abar">
+      <a href="https://nodejsdesignpatterns.com" target="_blank">Want to know more about Node.js, React and Universal Javascript?</a>
+    </div>
     <script src="/js/bundle.js"></script>
   </body>
 </html>
